hphp/hack/test/typecheck/well_formed_where_constraints_on_functions.php
<?hh

class G<T as arraykey> {}

function on_g<T>(T $_): void where T = G<null> {}
